tests/rascal/negative/type_errors/L1/13_expression_ES10_D4_75.ob
MODULE Test13;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := ((~ (x = (1223 MOD 200))) & (p & (1223 > (1 MOD x))));
               p := ((0 - 1223) < 0);
  (* error *)  r := (1223 < (x * 2));
               r := ((1 + (z + (x DIV 1))) = 1);
               z := (200 DIV 1223);
               p := (((x * y) - z) # (x * (0 + (+ y))));
               p := (((+ (y - 1)) * 200) = 200);
               p := ((0 + z) # (200 * ((- 200) - y)));
               x := (x DIV y);
               r := q
END Test13.